--- a/Lista/css/main.css
+++ b/Lista/css/main.css
@@ -5,8 +5,8 @@
 }
 
 :root{
-    --primary-color: #FFBA00;
-    --secundary-color: #FFF1CC;
+    --primary-color: #FFB6C1;
+    --secundary-color: 	#FFF0F5;
     --shadow-color: #CCC;
     --text-color: #FFF;
 }
