--- a/Lista/css/button.css
+++ b/Lista/css/button.css
@@ -2,15 +2,13 @@
     border-style: none;
     height: 40px;
     padding: 6px 12px;
-    background-color: black;
-    color: white;
     font-size: 1rem;
     cursor: pointer;
     transition: box-shadow .6s ease;
 }
 
-.button.blue{
-    background-color: #1FB6FF;
+button.blueviolet{
+    background-color:blueviolet;
 }
 
 button.green{
@@ -21,8 +19,8 @@ button.red{
     background-color: #FF4949;
 }
 
-button.yellow{
-    background-color: yellow;
+button.blue{
+    background-color: blue;
 }
 
 .button:hover{
