--- a/Lista/css/main.css
+++ b/Lista/css/main.css
@@ -5,7 +5,7 @@
 }
 
 :root{
-    --primary-color: #FFB6C1;
+    --primary-color: #DB7093;
     --secundary-color: 	#FFF0F5;
     --shadow-color: #CCC;
     --text-color: #FFF;
