--- a/Lista/css/button.css
+++ b/Lista/css/button.css
@@ -1,5 +1,6 @@
 .button{
     border-style: none;
+    border-radius: 9px;
     height: 40px;
     padding: 6px 12px;
     font-size: 1rem;
@@ -7,8 +8,8 @@
     transition: box-shadow .6s ease;
 }
 
-button.blueviolet{
-    background-color:blueviolet;
+button.yellow{
+    background-color:#FFD700;
 }
 
 button.green{
@@ -25,6 +26,12 @@ button.blue{
 
 .button:hover{
     box-shadow: inset 200px 0 0 #00000055;
+}
+
+#delete-all{
+    position: absolute;
+    bottom: 70px;
+    right: 120px;
 }
 
 @media(max-width:480px){
